Fix: Clear logos in the media-bar add-on were overlapping metadata at low resolutions

--- a/Theme/assets/add-ons/media-bar-plugin-support-nightly.css
+++ b/Theme/assets/add-ons/media-bar-plugin-support-nightly.css
@@ -129,7 +129,7 @@
     }
 
     .logo-container {
-        top: 30%;
+        top: 3%;
         align-items: flex-end;
         max-width: 35vw;
     }
